--- a/src/components/nav-desktop.astro
+++ b/src/components/nav-desktop.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from "astro-icon/components";
 import { ROUTES } from "@/lib/constants";
-import { formatText, hasSubMenus } from "@/utils/nav";
+import { formatText, hasSubMenus, formatRouteIcon } from "@/utils/nav";
 ---
 
 <nav class="relative hidden flex-wrap text-[10px] lg:flex">
@@ -12,7 +12,7 @@ import { formatText, hasSubMenus } from "@/utils/nav";
         <div class="group relative">
           <span class="group-hover:bg-cpurple-200 flex h-full cursor-pointer items-center px-4 transition-colors">
             <Icon
-              name={`navbar/${formatText(key).toLowerCase()}`}
+              name={`navbar/${formatRouteIcon(key)}`}
               class="mr-2 size-2.5 rotate-[-40deg]"
             />
             {formatText(key)}
@@ -59,10 +59,7 @@ import { formatText, hasSubMenus } from "@/utils/nav";
           href={(ROUTES.WEARETOP + value) as string}
           class="after-star last-of-type:bg-cpurple-300 hover:bg-cpurple-200 flex items-center px-4 py-10 transition-colors last-of-type:relative [&:first-of-type>svg]:skew-x-[-18deg]"
         >
-          <Icon
-            name={`navbar/${formatText(key).toLowerCase()}`}
-            class="mr-2 size-2"
-          />
+          <Icon name={`navbar/${formatRouteIcon(key)}`} class="mr-2 size-2" />
           {formatText(key)}
         </a>
       ),
@@ -79,10 +76,7 @@ import { formatText, hasSubMenus } from "@/utils/nav";
         class="transition-opacity hover:opacity-80"
         target="_blank"
       >
-        <Icon
-          name={`socials/${formatText(key).toLowerCase()}`}
-          class="size-6"
-        />
+        <Icon name={`socials/${formatRouteIcon(key)}`} class="size-6" />
       </a>
     ))
   }
