fix(topbar): reset animation revea

--- a/src/components/top-bar.astro
+++ b/src/components/top-bar.astro
@@ -12,7 +12,7 @@ import NavMobile from "@/components/nav-mobile.astro";
   <div class="container flex min-h-16 items-center justify-between">
     <Burger />
 
-    <a href="https://wearetop.co" class="order-last w-fit lg:order-none">
+    <a href="/" class="order-last w-fit lg:order-none">
       <img
         src={Logo.src}
         alt="We Are Top"
