fix(topbar): add animation reveal

--- a/src/components/top-bar.astro
+++ b/src/components/top-bar.astro
@@ -52,4 +52,10 @@ import NavMobile from "@/components/nav-mobile.astro";
     animation-timeline: scroll();
     animation-range: 0 100dvh;
   }
+
+  @keyframes reveal {
+    to {
+      background: black;
+    }
+  }
 </style>
