--- a/src/components/globals.astro
+++ b/src/components/globals.astro
@@ -1,7 +1,7 @@
 ---
-import Whatsapp from "@/components/wpp-btn.astro";
+import FloatButtons from "@/components/float-buttons.astro";
 import Sonner from "@/components/sonner.svelte";
 ---
 
-<Whatsapp />
+<FloatButtons />
 <Sonner client:only="svelte" />
