feat(animation-text): add animation text section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 import Hero from "@/components/home/hero.astro";
-import FloatButtons from "@/components/float-buttons.astro";
+import ScrollDrivenAnimation from "@/components/home/scroll-driven-animation.astro";
 ---
 
 <Layout title="WeAreTop | Consultoría en Educación en el Exterior">
   <Hero />
-  <FloatButtons />
+  <ScrollDrivenAnimation />
 </Layout>
