--- a/src/components/home/hero.astro
+++ b/src/components/home/hero.astro
@@ -14,7 +14,7 @@ import { Icon } from "astro-icon/components";
     autoplay></video>
 
   <div
-    class="relative z-10 container flex flex-col flex-col-reverse justify-between gap-20 text-center min-lg:flex-row min-lg:text-left"
+    class="relative z-10 container flex flex-col-reverse justify-between gap-20 text-center min-lg:flex-row min-lg:text-left"
   >
     <div class="flex flex-col space-y-4">
       <h1
@@ -37,7 +37,7 @@ import { Icon } from "astro-icon/components";
 
     <Icon
       name="yolo"
-      class="z-10 -mt-10 block hidden h-auto w-full max-w-40 min-lg:block"
+      class="z-10 -mt-10 hidden h-auto w-full max-w-40 min-lg:block"
     />
   </div>
 
