--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import Layout from "@/layouts/Layout.astro";
 import Hero from "@/components/home/hero.astro";
 import ScrollDrivenAnimation from "@/components/home/scroll-driven-animation.astro";
+import Bento from "@/components/home/bento.astro";
 ---
 
 <Layout title="WeAreTop | Consultoría en Educación en el Exterior">
   <Hero />
   <ScrollDrivenAnimation />
+  <Bento />
 </Layout>
