feat(bento): add scroll animation to bento grid

--- a/src/components/home/bento.astro
+++ b/src/components/home/bento.astro
@@ -3,7 +3,7 @@ import { Icon } from "astro-icon/components";
 ---
 
 <section class="container py-20">
-  <header class="relative text-center">
+  <header class="show-animation relative text-center">
     <Icon name="directional" class="text-cteal-100 mx-auto size-14" />
     <h2 class="heading-2 font-black">¿QUÉ CAMINO CAMBIARÁ TU VIDA?</h2>
     <p class="text-cteal-100 text-xl">El momento es ahora</p>
@@ -16,7 +16,7 @@ import { Icon } from "astro-icon/components";
   <div class="mt-25 grid gap-4 sm:grid-cols-2 lg:grid-cols-3 lg:grid-rows-3">
     <a
       href="#"
-      class="group relative overflow-hidden rounded-3xl shadow-xs lg:row-span-2"
+      class="group show-animation relative overflow-hidden rounded-3xl shadow-xs lg:row-span-2"
     >
       <img
         src="/images/home/idiomas.avif"
@@ -37,7 +37,10 @@ import { Icon } from "astro-icon/components";
       ></span>
     </a>
 
-    <a href="#" class="group relative overflow-hidden rounded-3xl shadow-xs">
+    <a
+      href="#"
+      class="group show-animation relative overflow-hidden rounded-3xl shadow-xs"
+    >
       <img
         src="/images/home/hight-education.avif"
         alt="Puede ser una imagen de dos personas en la playa con tablas de surf"
@@ -58,7 +61,7 @@ import { Icon } from "astro-icon/components";
 
     <a
       href="#"
-      class="group relative overflow-hidden rounded-3xl shadow-xs lg:col-start-2 lg:row-start-2"
+      class="group show-animation relative overflow-hidden rounded-3xl shadow-xs lg:col-start-2 lg:row-start-2"
     >
       <img
         src="/images/home/certificados-y-diplomados.avif"
@@ -81,7 +84,7 @@ import { Icon } from "astro-icon/components";
 
     <a
       href="#"
-      class="group relative overflow-hidden rounded-3xl shadow-xs lg:col-start-3 lg:row-span-2 lg:row-start-1"
+      class="group show-animation relative overflow-hidden rounded-3xl shadow-xs lg:col-start-3 lg:row-span-2 lg:row-start-1"
     >
       <img
         src="/images/home/foundations-and-pathways.avif"
@@ -105,7 +108,7 @@ import { Icon } from "astro-icon/components";
 
     <a
       href="#"
-      class="group relative overflow-hidden rounded-3xl shadow-xs lg:col-span-1 lg:row-start-3"
+      class="group show-animation relative overflow-hidden rounded-3xl shadow-xs lg:col-span-1 lg:row-start-3"
     >
       <img
         src="/images/home/summer-camps.avif"
@@ -127,7 +130,7 @@ import { Icon } from "astro-icon/components";
 
     <a
       href="#"
-      class="group relative overflow-hidden rounded-3xl shadow-xs lg:row-start-3"
+      class="group show-animation relative overflow-hidden rounded-3xl shadow-xs lg:row-start-3"
     >
       <img
         src="/images/home/boarding-school.avif"
@@ -149,7 +152,7 @@ import { Icon } from "astro-icon/components";
 
     <a
       href="#"
-      class="group relative overflow-hidden rounded-3xl shadow-xs lg:row-start-3"
+      class="group show-animation relative overflow-hidden rounded-3xl shadow-xs lg:row-start-3"
     >
       <img
         src="/images/home/top-experiences.avif"
