--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -57,3 +57,25 @@
     z-index: 3;
   }
 }
+
+.show-animation {
+  view-timeline-name: --reveal;
+
+  animation: show;
+  animation-fill-mode: both;
+
+  animation-timeline: --reveal;
+  animation-range: entry 25% cover 50%;
+}
+
+@keyframes show {
+  from {
+    opacity: 0.5;
+    scale: 90%;
+  }
+
+  to {
+    opacity: 1;
+    scale: 100%;
+  }
+}
