feat(testimonials): add base testimonials

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,12 @@ import Layout from "@/layouts/Layout.astro";
 import Hero from "@/components/home/hero.astro";
 import ScrollDrivenAnimation from "@/components/home/scroll-driven-animation.astro";
 import Bento from "@/components/home/bento.astro";
+import Testimonials from "@/components/home/testimonials.astro";
 ---
 
 <Layout title="WeAreTop | Consultoría en Educación en el Exterior">
   <Hero />
   <ScrollDrivenAnimation />
   <Bento />
+  <Testimonials />
 </Layout>
