refactor(home): reduce size to shadow text in mobile

--- a/src/components/home/bento.astro
+++ b/src/components/home/bento.astro
@@ -8,7 +8,7 @@ import { Icon } from "astro-icon/components";
     <h2 class="heading-2 font-black">¿QUÉ CAMINO CAMBIARÁ TU VIDA?</h2>
     <p class="text-cteal-100 text-xl">El momento es ahora</p>
     <span
-      class="text-cteal-100/10 pointer-events-none absolute inset-x-0 -bottom-30 text-[200px] leading-none font-black uppercase"
+      class="text-cteal-100/10 pointer-events-none absolute inset-x-0 -bottom-10 text-[90px] leading-none font-black uppercase lg:-bottom-30 lg:text-[200px]"
       >AHORA</span
     >
   </header>
