--- a/src/components/home/testimonials.astro
+++ b/src/components/home/testimonials.astro
@@ -101,7 +101,7 @@ const TESTIMONIALS: Testimonials[] = [
       <span class="text-cpurple-300">TOP</span>
     </h2>
     <span
-      class="text-cpurple-300/10 pointer-events-none absolute inset-x-0 -bottom-11 text-[60px] leading-none font-black uppercase lg:-bottom-30 lg:text-[200px]"
+      class="text-cpurple-300/10 pointer-events-none absolute inset-x-0 -bottom-11 text-[50px] leading-none font-black uppercase sm:text-[60px] lg:-bottom-30 lg:text-[200px]"
       >Testimonials</span
     >
   </header>
