--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ const { title } = Astro.props;
     <title>{title}</title>
     <Head />
   </head>
-  <body>
+  <body class="overflow-x-hidden">
     <TopBar />
     <slot />
     <Globals />
