--- a/src/components/home/hero.astro
+++ b/src/components/home/hero.astro
@@ -8,10 +8,10 @@ import { Icon } from "astro-icon/components";
   <video
     class="absolute inset-0 mx-auto h-screen w-full object-cover object-bottom"
     src="https://wearetop.co/static/home-hero.mp4"
-    playsinline
-    muted
-    loop
-    autoplay></video>
+    autoplay="autoplay"
+    loop="loop"
+    muted="muted"
+    playsinline></video>
 
   <div
     class="relative z-10 container flex flex-col-reverse justify-between gap-20 text-center min-lg:flex-row min-lg:text-left"
