fix(scroll-drive-animation): reduce height to fix scroll animation

--- a/src/components/home/hero.astro
+++ b/src/components/home/hero.astro
@@ -43,7 +43,7 @@ import { Icon } from "astro-icon/components";
 
   <a
     role="button"
-    href="#pricing"
+    href="#scroll-bottom"
     class="absolute inset-x-0 bottom-0 z-10 mx-auto hidden w-fit animate-bounce lg:block"
     aria-label="Scroll down"
   >
