refactor(float-buttons): add missing links

--- a/src/components/float-buttons.astro
+++ b/src/components/float-buttons.astro
@@ -20,7 +20,7 @@ import { Icon } from "astro-icon/components";
 
   <a
     class="group relative z-2 grid w-fit grid-cols-[auto_0fr] items-center overflow-hidden bg-[#006BFF] px-2.5 py-2 transition-[grid-template-columns] duration-150 hover:grid-cols-[auto_1fr] hover:gap-2"
-    href="#"
+    href="https://calendly.com/wearetop"
     target="_blank"
     rel="noopener noreferrer"
   >
@@ -35,7 +35,7 @@ import { Icon } from "astro-icon/components";
 
   <a
     class="group relative z-2 grid w-fit grid-cols-[auto_0fr] items-center overflow-hidden bg-[#E939EF] px-2.5 py-2 transition-[grid-template-columns] duration-150 hover:grid-cols-[auto_1fr] hover:gap-2"
-    href="#"
+    href="https://drive.google.com/file/d/1JExNVCNoV71JkSuDpxGOnTp-HykoquhP/view"
     target="_blank"
     rel="noopener noreferrer"
   >
