--- a/src/components/home/bento.astro
+++ b/src/components/home/bento.astro
@@ -38,7 +38,7 @@ import { Icon } from "astro-icon/components";
     </a>
 
     <a
-      href="#"
+      href="/higher-education"
       class="group show-animation relative overflow-hidden rounded-3xl shadow-xs"
     >
       <img
