style(footer): update image class to w-auto

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -19,7 +19,7 @@ import { Image } from "astro:assets";
             alt="logo"
             width={80}
             height={30}
-            class="h-7 w-fit"
+            class="h-7 w-auto"
             title="Expatrio"
           />
         </a>
@@ -29,7 +29,7 @@ import { Image } from "astro:assets";
             alt="logo"
             width={80}
             height={30}
-            class="h-7 w-fit"
+            class="h-7 w-auto"
             title="Team Member"
           />
         </a>
@@ -39,12 +39,12 @@ import { Image } from "astro:assets";
             alt="logo"
             width={80}
             height={30}
-            class="h-7 w-fit"
+            class="h-7 w-auto"
             title="NextPay"
           />
         </a>
         <a href="https://www.flywire.com/industries/education" target="_blank">
-          <Icon name="logos/flywire" class="h-7 w-fit" title="Flywire" />
+          <Icon name="logos/flywire" class="h-7 w-auto" title="Flywire" />
         </a>
       </div>
     </div>
@@ -53,10 +53,12 @@ import { Image } from "astro:assets";
       <p
         class="order-last mt-4 text-center text-xs text-white/60 md:order-first md:mt-0 md:block md:text-left"
       >
-        © 2024 WeAreTop. All rights reserved. Powered by <a
-          href="https://rxtsel.dev"
-          class="transition-colors hover:text-white"
-          target="_blank">@rxtsel.</a
+        © 2024 WeAreTop. All rights reserved. <span class="block lg:inline"
+          >Powered by <a
+            href="https://rxtsel.dev"
+            class="transition-colors hover:text-white"
+            target="_blank">@rxtsel.</a
+          ></span
         >
       </p>
       <div
