--- a/src/components/home/hero.astro
+++ b/src/components/home/hero.astro
@@ -7,7 +7,7 @@ import { Icon } from "astro-icon/components";
 >
   <video
     class="absolute inset-0 mx-auto h-screen w-full object-cover object-bottom"
-    src="https://wearetop.co/static/home-hero.mp4"
+    src="https://content.wearetop.co/static/home-hero.mp4"
     autoplay="autoplay"
     loop="loop"
     muted="muted"
