refactor(links): update programs link

--- a/src/components/home/bento.astro
+++ b/src/components/home/bento.astro
@@ -2,7 +2,7 @@
 import { Icon } from "astro-icon/components";
 ---
 
-<section class="container py-20">
+<section class="container py-20" id="programas">
   <header class="show-animation relative text-center">
     <Icon name="directional" class="text-cteal-100 mx-auto size-14" />
     <h2 class="heading-2 font-black">¿QUÉ CAMINO CAMBIARÁ TU VIDA?</h2>
