--- a/src/components/nav-desktop.astro
+++ b/src/components/nav-desktop.astro
@@ -56,7 +56,11 @@ import { formatText, hasSubMenus, formatRouteIcon } from "@/utils/nav";
       ) : (
         // Normal items
         <a
-          href={(ROUTES.WEARETOP + value) as string}
+          href={
+            value === "/#programas"
+              ? value
+              : ((ROUTES.WEARETOP + value) as string)
+          }
           class="after-star last-of-type:bg-cpurple-300 hover:bg-cpurple-200 flex items-center px-4 py-10 transition-colors last-of-type:relative [&:first-of-type>svg]:skew-x-[-18deg]"
         >
           <Icon name={`navbar/${formatRouteIcon(key)}`} class="mr-2 size-2" />
