--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,6 +37,11 @@ const { title } = Astro.props;
 </html>
 
 <style>
+  html,
+  body {
+    scroll-padding-top: 64px;
+  }
+
   body {
     font-family:
       "Lato",
