--- a/src/components/home/testimonials.astro
+++ b/src/components/home/testimonials.astro
@@ -96,7 +96,7 @@ const TESTIMONIALS: Testimonials[] = [
 
 <section class="container py-20">
   <header class="show-animation relative text-center">
-    <h2 class="heading-2 font-black">
+    <h2 class="text-heading-2 font-black">
       Ellos han vivido una <span class="text-cteal-100">Experiencia</span>
       <span class="text-cpurple-300">TOP</span>
     </h2>
