--- a/src/components/home/bento.astro
+++ b/src/components/home/bento.astro
@@ -5,7 +5,7 @@ import { Icon } from "astro-icon/components";
 <section class="container py-20" id="programas">
   <header class="show-animation relative text-center">
     <Icon name="directional" class="text-cteal-100 mx-auto size-14" />
-    <h2 class="heading-2 font-black">¿QUÉ CAMINO CAMBIARÁ TU VIDA?</h2>
+    <h2 class="text-heading-2 font-black">¿QUÉ CAMINO CAMBIARÁ TU VIDA?</h2>
     <p class="text-cteal-100 text-xl">El momento es ahora</p>
     <span
       class="text-cteal-100/10 pointer-events-none absolute inset-x-0 -bottom-10 text-[90px] leading-none font-black uppercase lg:-bottom-30 lg:text-[200px]"
