--- a/src/components/home/hero.astro
+++ b/src/components/home/hero.astro
@@ -18,7 +18,7 @@ import { Icon } from "astro-icon/components";
   >
     <div class="flex flex-col space-y-4">
       <h1
-        class="heading-1 flex flex-col gap-1 leading-none font-black text-white"
+        class="text-heading-1 flex flex-col gap-1 leading-none font-black text-white"
       >
         No somos una agencia. Ofrecemos <b class="text-cteal-100 block"
           >Consultoría en Educación Internacional.</b
