--- a/src/components/seguros-de-viaje/hero.astro
+++ b/src/components/seguros-de-viaje/hero.astro
@@ -1,6 +1,6 @@
-<main class="relative grid min-h-dvh place-items-center">
+<main class="relative grid min-h-96 place-items-center lg:min-h-dvh">
   <div
-    class="absolute -z-1 h-dvh w-full after:absolute after:inset-0 after:z-10 after:bg-black/65"
+    class="absolute -z-1 h-96 w-full after:absolute after:inset-0 after:z-10 after:bg-black/65 lg:h-dvh"
   >
     <img
       src="/images/seguros-de-viaje-hero.avif"
@@ -11,15 +11,15 @@
     />
   </div>
 
-  <header class="space-y-4 text-center text-white">
+  <header class="container space-y-4 text-center text-white">
     <h1
-      class="text-heading-1 z-20 flex flex-col gap-1 leading-none font-black text-white"
+      class="text-heading-1 animate-slide-up-fade z-20 flex flex-col gap-1 leading-none font-black text-white"
     >
       🌍✈️ Viaja tranquilo. Nosotros cuidamos de ti.
     </h1>
 
     <p
-      class="mx-auto max-w-4xl text-xs text-white min-sm:block sm:text-sm md:text-base min-lg:text-2xl"
+      class="animate-slide-up-fade mx-auto max-w-4xl text-white min-sm:block sm:text-sm md:text-base min-lg:text-2xl"
     >
       Disfruta tu nueva casa, tu aventura y tu experiencia en el extranjero <strong
         class="font-bold">sin preocuparte por imprevistos.</strong
