refactor(components): format with linter

--- a/src/components/seguros-de-viaje/countries.astro
+++ b/src/components/seguros-de-viaje/countries.astro
@@ -1,5 +1,5 @@
 <section
-  class="section-1 container mx-auto flex min-h-96 flex-col items-center justify-center gap-10 pt-28 pb-16 lg:min-h-dvh lg:py-0 relative z-0"
+  class="section-1 relative z-0 container mx-auto flex min-h-96 flex-col items-center justify-center gap-10 pt-28 pb-16 lg:min-h-dvh lg:py-0"
 >
   <p class="text-heading-2 first-text text-center">
     Tenemos el seguro médico internacional que necesitas para cumplir con los
